--- a/WhatItsAbout.html
+++ b/WhatItsAbout.html
@@ -43,5 +43,12 @@
             <p class="ah">Copyright Checklist</p>
             <a href="https://drive.google.com/file/d/1jH55A9bM_SurfPAii_Y11zFTVMFE5LXy/view?usp=sharing" class="at">Copyright Checklist</a>
         </div>
+        <div>
+            <p class="ah">Image Sources</p>
+            <a href="https://pngtree.com/freepng/hand-drawn-cartoon-face-dragon-fruit_4625653.html" class="at">Dragonfruit</a>
+            <a href="https://stock.adobe.com/bg/images/cute-happy-strawberry-character-emoticon/357779777" class="at">Strawberry</a>
+            <a href="https://unsplash.com/photos/wds9ue_gops" class="at">Kiwi</a>
+            <a href="https://pixabay.com/illustrations/banana-fruit-yellow-sweet-healthy-2850841/" class="at">Banana</a>      
+        </div>
     </body>
 </html>
